--- a/MyShop/wwwroot/html/Products.html
+++ b/MyShop/wwwroot/html/Products.html
@@ -3,7 +3,6 @@
 <head>
     <script src="../js/Products.js"></script>
     <link href="../css/Products.css" rel="stylesheet" />
-
     <meta charset="utf-8" />
     <title></title>
     <template id="temp-card">
@@ -17,6 +16,7 @@
             <p><button>הוסף לסל</button></p>
         </div>
     </template>
+
     <template id="temp-category">
         <div class="cb checkbox">
             <input type="checkbox" class="opt" id="" value="">
@@ -36,13 +36,13 @@
             <section class="QuickLinks">
                 <ul>
                     <li class="" data-section="myAccount">
-                        <a href="#" title="כניסה לצפייה בפרטי החשבון"  onclick="TrackLinkID(this);"  accesskey="h">החשבון שלי</a>
+                        <a href="#" title="כניסה לצפייה בפרטי החשבון" onclick="TrackLinkID(this);" accesskey="h">החשבון שלי</a>
                     </li>
                     <li>
                         <a href="#" title="קניה מהירה">קניה מהירה</a>
                     </li>
                     <li>
-                        <a href="#" title="עזרה - שאלות נפוצות, כיצד לקנות באינטרנט, מדריך ועוד"  target="_blank">עזרה</a>
+                        <a href="#" title="עזרה - שאלות נפוצות, כיצד לקנות באינטרנט, מדריך ועוד" target="_blank">עזרה</a>
                     </li>
                 </ul>
             </section>
@@ -85,19 +85,19 @@
             <input type="text" id="nameSearch" class="floatRight" placeholder="חיפוש לפי שם מוצר">
 
             <button class="floatRight" tabindex="0" onclick="filterProducts()">
-                <span class="header42"><img src="Images/searchIcon.svg" alt="סמל חיפוש"></span>
+                <span class="header42"><img src="../images/searchIcon.svg" alt="סמל חיפוש"></span>
             </button>
         </div>
         <div id="priceRangeFilter" class="filterBreak">
             <div><span id="counter">  </span> מחיר:</div>
 
-            <input type="text" maxlength="9" id="minPrice" class="priceInputText">
+            <input type="number" min=0 id="minPrice" class="priceInputText">
             <span class="priceCurrency">₪</span>
 
-            <input type="text" maxlength="9" id="maxPrice" class="priceInputText">
+            <input type="number" min=0 id="maxPrice" class="priceInputText">
             <span class="priceCurrency">₪</span>
             <button onclick="filterProducts()">
-                <span><img src="Images/searchIcon.svg" alt="סמל חיפוש"></span>
+                <span><img src="../images/searchIcon.svg" alt="סמל חיפוש"></span>
             </button>
         </div>
     </div>
