--- a/MyShop/wwwroot/html/Products.html
+++ b/MyShop/wwwroot/html/Products.html
@@ -68,7 +68,8 @@
     <div id="filters" class="Filters fixedVisible">
         <div class="ResultCount" style="position: absolute; top: 0px;">
             <a class="Clear" href="">נקה הכל</a>
-            <div><span id="counter"></span> מוצרים</div>
+            <div><span id="counter">  </span> מוצרים</div>
+
             <div>
                 <span id="counter">
 
@@ -84,7 +85,7 @@
             <input type="text" id="nameSearch" class="floatRight" placeholder="חיפוש לפי שם מוצר">
 
             <button class="floatRight" tabindex="0" onclick="filterProducts()">
-                <span class="header42"><img src="../images/searchIcon.svg" alt="סמל חיפוש"></span>
+                <span class="header42"><img src="Images/searchIcon.svg" alt="סמל חיפוש"></span>
             </button>
         </div>
         <div id="priceRangeFilter" class="filterBreak">
@@ -96,7 +97,7 @@
             <input type="number" min=0 id="maxPrice" class="priceInputText">
             <span class="priceCurrency">₪</span>
             <button onclick="filterProducts()">
-                <span><img src="../images/searchIcon.svg" alt="סמל חיפוש"></span>
+                <span><img src="Images/searchIcon.svg" alt="סמל חיפוש"></span>
             </button>
         </div>
     </div>
@@ -110,4 +111,4 @@
         <a href="#">&raquo;</a>
     </div>
 </body>
-</html>
+</html
