--- a/MyShop/wwwroot/html/ShoppingBag.html
+++ b/MyShop/wwwroot/html/ShoppingBag.html
@@ -8,9 +8,18 @@
     <template id="temp-row">
         <tr class="item-row">
             <td class="imageColumn"><a rel="lightbox" href="#"><div class="image"></div></a></td>
-
-            <td class="descriptionColumn"><div><h3 class="itemName"></h3><h6><p class="itemNumber"></p><a class="viewLink" href="https://www.next.co.il/he/g59522s11#407223">לפרטים נוספים</a></h6></div></td>
-            <td class="availabilityColumn"><div>במלאי</div></td>
+            <td class="descriptionColumn">
+                <div>
+                    <h3 class="itemName"></h3>
+                    <h6>
+                        <p class="itemNumber"></p>
+                        <a class="viewLink" href="https://www.next.co.il/he/g59522s11#407223">לפרטים נוספים</a>
+                    </h6>
+                </div>
+            </td>
+            <td class="availabilityColumn">
+                <div>במלאי</div>
+            </td>
             <td class="totalColumn delete" >
                 <div class="expandoHeight" style="height: 99px;">
                    <p class="price"></p>
@@ -24,6 +33,7 @@
     <div class="cart">
         <div id="title">
             <h1> סל קניות </h1>
+            <br />
             <p>
                 הסל שלך מכיל <span id="itemCount"></span> פריטים ומגיע לסך של <span id="totalAmount"></span>.
             </p>
