--- a/MyShop/wwwroot/html/Products.html
+++ b/MyShop/wwwroot/html/Products.html
@@ -36,14 +36,20 @@
             <section class="QuickLinks">
                 <ul>
                     <li class="" data-section="myAccount">
-                        <a href="#" title="כניסה לצפייה בפרטי החשבון" onclick="TrackLinkID(this);" accesskey="h">החשבון שלי</a>
+                        <a href="./LogIn.html">Login</a>
                     </li>
                     <li>
-                        <a href="#" title="קניה מהירה">קניה מהירה</a>
+                        <a href="./Update.html">Update</a>
                     </li>
                     <li>
-                        <a href="#" title="עזרה - שאלות נפוצות, כיצד לקנות באינטרנט, מדריך ועוד" target="_blank">עזרה</a>
+                        <!-- title="כניסה לצפייה בפרטי החשבון" onclick="Logout()" target="_blank"-->
+                        <!--<a href="#" title=" Logout" onclick="Logout()">Logout</a>-->
+
+                    <li class="" data-section="myAccount">
+                        <a href="#" title="Logout" onclick="Logout()" ;" accesskey="h">Logout</a>
                     </li>
+
+
                 </ul>
             </section>
 
