--- a/MyShop/wwwroot/html/Products.html
+++ b/MyShop/wwwroot/html/Products.html
@@ -35,18 +35,18 @@
 
             <section class="QuickLinks">
                 <ul>
-                    <li class="" data-section="myAccount">
-                        <a href="./LogIn.html">Login</a>
+                    <li id="Login" data-section="myAccount" style="display: none;">
+                        <a href="./LogIn.html" >Login</a>
                     </li>
-                    <li>
-                        <a href="./Update.html">Update</a>
+                    <li  id="Update" style="display: none;">
+                        <a href="./Update.html" >Update</a>
                     </li>
                     <li>
                         <!-- title="כניסה לצפייה בפרטי החשבון" onclick="Logout()" target="_blank"-->
                         <!--<a href="#" title=" Logout" onclick="Logout()">Logout</a>-->
 
-                    <li class="" data-section="myAccount">
-                        <a href="#" title="Logout" onclick="Logout()" ;" accesskey="h">Logout</a>
+                    <li id="Logout" data-section="myAccount" style="display: none;">
+                        <a href="#" title="Logout" onclick="Logout()" ;" accesskey="h" >Logout</a>
                     </li>
 
 
